--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
     <title>Playground</title>
+    <link href="./dist/main.css" rel="stylesheet"/>
 </head>
 
 <body>
